--- a/storm-data.Rmd
+++ b/storm-data.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Analysis of Economic and Population Health Impact of Historical Storm Events"
 subtitle: "Tornadoes, Hurricanes and Typhoons, Oh My!"
-author: "Shawn Crain"
-date: "11/24/2017"
+author: "MIN YAN"
+date: "12/16/2020"
 output: 
   html_document:
     fig_width: 10
@@ -20,7 +20,7 @@ require(reshape2, quietly = TRUE)
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
 ```
 
-[github repository](https://github.com/scrain/reproducible-research-project-2)
+[github repository] https://github.com/MinYAN14/reproducible-research-project-2
 
 ## Synopsis
 
@@ -28,6 +28,12 @@ U.S. National Oceanic and Atmospheric Administration's (NOAA) storm database beg
 set of 48 storm data events in 1996.  After analyzing storm data events from 1996 to 2011 it was found
 that Hurricanes/Typhoons cause the most economic impact in relation to crop and property damage, while
 Tornadoes take the most population toll in regards to injuries and fatalities.
+
+##Questions
+Two questions will be answered
+1.	Across the United States, which types of events are most harmful with respect to population health?
+2.	Across the United States, which types of events have the greatest economic consequences?
+
 
 ## Table of Contents
 
